<resources>

    <string name="app_name">想吃</string>

    <!-- 开屏页 -->
    <string name="splash_name">校园超市</string>
    <string name="splash_description">送货上门，宿舍都不用出^-^</string>
    <string name="splash_copyright">校园超市</string>

    <!-- RecyclerView Footer 提示 -->
    <string name="recycler_footer_end">没有更多内容了</string>
    <string name="recycler_footer_loading">正在加载中...</string>
    <string name="recycler_footer_network_error">点击重新加载</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login_username_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_login">登录</string>
    <string name="login_register"><u>用户注册</u></string>
    <string name="login_forget_password"><u>忘记密码?</u></string>

</resources>
